base/src/test/resources/failure/patterns/issues2/issue250.aya.txt
In file $FILE:3:4 ->

  1 | open data Crash
  2 | | go Crash {
  3 |   | ready => ready
          ^---^

Error: Attempting to use a definition `ready` which is not yet typechecked

1 error(s), 0 warning(s).
What are you doing?
